--- a/i_css/tienda/footer.css
+++ b/i_css/tienda/footer.css
@@ -3,6 +3,9 @@
     Created on : 15 sept. 2020, 13:59:36
     Author     : neury-dev
 */
+footer {
+    font-size: 0.80em;
+}
 footer.n-footer {
     display: grid;
     grid-template-columns: 33% 25% auto;
@@ -12,30 +15,18 @@ footer.n-footer {
 .n-footer-area-1 { grid-area: 1 / 1 / span 1 / span 1; }
 .n-footer-area-2 { grid-area: 1 / 2 / span 1 / span 1; }
 .n-footer-area-3 { grid-area: 1 / 3 / span 1 / span 1; }
-section.n-grid-area-5 > hr {
-    color: var(--n-color-tres);
-    width: 90%;
-}
-footer.n-footer > section > h3 {
-    font-weight: bold;
-    font-size: 0.90em;
-}
-footer.n-footer > section.n-footer-area-1 > p {
-    font-size: 0.90em;
-    padding: 0em 0em 0.70em 0em;
-}
+section.n-grid-area-5 > hr { color: var(--n-color-tres); width: 90%; }
+footer.n-footer > section > h3 { font-weight: bold; }
+footer.n-footer > section.n-footer-area-1 > p { padding: 0em 0em 0.70em 0em; }
 footer.n-footer > section#n-contacto > form > p > input, 
 footer.n-footer > section#n-contacto > form > p > textArea { 
-    font-size: 0.80em;
     width: 70%;
     border: 0.10em solid var(--n-color-dos);
-    border-radius: 0.50em;
-    padding: 0.60em;
+    border-radius: var(--n-radio);
+    padding: var(--n-relleno);
     outline: none;
 }
-::placeholder { 
-    color: var(--n-color-tres);
-}
+::placeholder { color: var(--n-color-tres); }
 footer.n-footer > section#n-contacto > form > p > input:valid,
 footer.n-footer > section#n-contacto > form > p > textArea:valid {
     color: var(--n-color);
@@ -51,46 +42,23 @@ footer.n-footer > section#n-contacto > form > button {
     color: var(--n-color);
     background-color: var(--n-color-dos);
     font-weight: bold;
-    font-size: 0.90em;
     width: 70%;
     border: none;
-    border-radius: 0.50em;
-    padding: 0.50em;
+    border-radius: var(--n-radio);
+    padding: var(--n-relleno);
 }
 footer.n-footer > section#n-contacto > form > button:hover {
     color: var(--n-color-dos);
     background-color: var(--n-color-tres);
     text-shadow: var(--n-sombra-de-texto);
 }
-footer.n-footer > section.n-footer-area-2 {
-    display: flex;
-    flex-direction: column;
-}
-footer.n-footer > section.n-footer-area-2 > a {
-    color: var(--n-color-dos);
-    font-size: 0.90em;
-    text-decoration: none;
-    padding: 0em 0em 0.70em 0em;
-}
-footer.n-footer > section.n-footer-area-2 > a:hover {
-    color: var(--n-color-tres);
-    font-weight: bold;
-}
-footer.n-footer > section.n-footer-area-3 > address {
-    font-size: 0.90em;
-    margin: 0em 0em 0.70em 0em;
-}
-footer.n-footer > section.n-footer-area-3 > address > p > i {
-    padding: 0em 0em 0.20em 0em;
-}
-footer.n-footer > section.n-footer-area-3 > address > a > i {
-    color: var(--n-color-dos);
-    font-size: 1em;
-}
-footer.n-footer > section.n-footer-area-3 > a > i {
-    color: var(--n-color-dos);
-    font-size: 4em;
-}
+footer.n-footer > section.n-footer-area-2 { display: flex; flex-direction: column; }
+footer.n-footer > section.n-footer-area-2 > a { color: var(--n-color-dos); padding: 0em 0em 0.70em 0em; }
+footer.n-footer > section.n-footer-area-2 > a:hover { color: var(--n-color-tres); font-weight: bold; }
+footer.n-footer > section.n-footer-area-3 > address { margin: 0em 0em 0.70em 0em; }
+footer.n-footer > section.n-footer-area-3 > address > p > i { padding: 0em 0em 0.20em 0em; }
+footer.n-footer > section.n-footer-area-3 > address > a > i { color: var(--n-color-dos);}
+footer.n-footer > section.n-footer-area-3 > a > i { color: var(--n-color-dos); font-size: 4em; }
 @media screen and (min-width: 24.1099em) and (max-width: 56.99em)  {
     footer.n-footer {
         display: grid;
@@ -105,16 +73,4 @@ footer.n-footer > section.n-footer-area-3 > a > i {
     footer.n-footer > section#n-contacto > form > button { 
         width: 98%;
     } 
-    footer.n-footer > section > h3,
-    footer.n-footer > section.n-footer-area-1 > p,
-    footer.n-footer > section.n-footer-area-2 > a,
-    footer.n-footer > section.n-footer-area-3 > address {
-        font-size: 0.80em;
-    }
-    footer.n-footer > section.n-footer-area-3 > address > a > i {
-        font-size: 0.90em;
-    }
-    footer.n-footer > section.n-footer-area-3 > a > i {
-        font-size: 3.60em;
-    }
 }
