--- a/i_css/tienda/carrito.css
+++ b/i_css/tienda/carrito.css
@@ -1,7 +1,7 @@
 @import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 28 nov. 2020, 12:40:34
-    Author     : desarrollador
+    Author     : neury-dev
 */
 section.n-grid-area-4 > article {
     display: flex;
@@ -10,9 +10,7 @@ section.n-grid-area-4 > article {
     padding: 0em 3em 3em 0em;
 }
 @media screen and (max-width: 69.99em) {
-    section.n-grid-area-4 > article {
-        padding: 0em 0.50em 0.50em 0em;
-    }
+    section.n-grid-area-4 > article { padding: 0em 0.50em 0.50em 0em; }
 }
 .n-carrito-resultado {
     display: flex;
@@ -28,7 +26,6 @@ section.n-grid-area-4 > article {
     margin-right: 1em;
 }
 .n-carrito-resultado > section > ul {
-    color: var(--n-color-dos);
     font-family: var(--n-fuente-dos);
     font-size: 0.80em;
     list-style-type: none;
@@ -36,16 +33,8 @@ section.n-grid-area-4 > article {
     margin: 0;
     padding: 0;
 }
-.n-carrito-resultado > section > ul.izquierda {
-    font-weight: bold;
-    margin-right: 1em;
-}
-.n-carrito-resultado > section > ul > li > span {
-    font-weight: normal;
-}
-.n-carrito-resultado > section.procesar {
-    font-family: var(--n-fuente-dos);
-}
+.n-carrito-resultado > section > ul.izquierda { font-weight: bold; margin-right: 1em; }
+.n-carrito-resultado > section > ul > li > span { font-weight: normal; }
 .n-carrito-resultado > section.procesar > form > label {
     color: var(--n-color-verde);
     font-size: 0.80em;
@@ -56,20 +45,20 @@ section.n-grid-area-4 > article {
     width: 14em;
     margin-bottom: 0.30em;
     border: 0.10em solid var(--n-color-verde);
-    border-radius: 0.50em;
+    border-radius: var(--n-radio);
     padding: 0.40em 1em 0.40em 1em;
     caret-color: var(--n-color-verde);
 }
 .n-carrito-resultado > section.procesar > form > button {
     color: var(--n-color);
     background-color: var(--n-color-verde);
-    font-family: var(--n-fuente);
+    font-weight: bold;
     font-size: 0.80em;
     width: 14em;
     margin-bottom: 0.50em;
     border: none;
-    border-radius: 0.50em;
-    padding: 0.40em;
+    border-radius: var(--n-radio);
+    padding: var(--n-relleno);
 }
 .n-carrito-resultado > section.procesar > form > button:hover {
     color: var(--n-color-verde);
@@ -77,28 +66,23 @@ section.n-grid-area-4 > article {
     text-shadow: var(--n-sombra-verde);
     box-shadow: var(--n-sombra-caja-verde);
 }
-.n-limpiar-mas {
-    margin-bottom: 1em;
-}
-.n-limpiar-mas > p {
-    color: var(--n-color-dos);
-    font-size: 0.80em;
-}
+.n-limpiar-mas { margin-bottom: 1em; }
+.n-limpiar-mas > p { font-size: 0.80em; }
 .n-limpiar-mas > form > button {
     color: var(--n-color);
     background-color: var(--n-color-rojo);
-    font-family: var(--n-fuente);
+    font-weight: bold;
     font-size: 0.80em;
     width: 100%;
     border: none;
-    border-radius: 0.50em;
-    padding: 0.20em;
+    border-radius: var(--n-radio);
+    padding: var(--n-relleno);
 }
 .n-limpiar-mas > form > button:hover {
     color: var(--n-color-rojo);
     background-color: var(--n-color);
-    text-shadow: var(--n-sombra-roja);
-    box-shadow: var(--n-sombra-caja-roja);
+    text-shadow: var(--n-sombra-rojo);
+    box-shadow: var(--n-sombra-caja-rojo);
 }
 .n-elegido {
     display: grid;
@@ -118,7 +102,7 @@ section.n-grid-area-4 > article {
     width: 7em;
     height: 14em;
     vertical-align: middle;
-    border-radius: 1em;
+    border-radius: var(--n-radio);
     object-fit: cover;
 }
 .n-elegido > section.area-2 {
@@ -127,35 +111,27 @@ section.n-grid-area-4 > article {
     align-content: flex-end;
 }
 .n-elegido > section.area-2 > ul {
-    font-family: var(--n-fuente-dos);
     font-size: 0.80em;
     font-weight: bold;
     list-style-type: none;
     margin: 0;
     padding: 0;
 }
-.n-elegido > section.area-2 > ul > li > span {
-    font-weight: normal;
-}
+.n-elegido > section.area-2 > ul > li > span { font-weight: normal; }
 .n-elegido > section.area-3 > section > form > button {
     color: var(--n-color);
     background-color: var(--n-color-dos);
-    font-family: var(--n-fuente);
+    font-weight: bold;
     font-size: 0.70em;
     width: 100%;
     margin-top: 0.50em;
     border: none;
-    border-radius: 0.50em;
-    padding: 0.20em;
+    border-radius: var(--n-radio);
+    padding: var(--n-relleno);
 }
 .n-elegido > section.area-3 > section > form > button:hover {
     color: var(--n-color-dos);
     background-color: var(--n-color-tres);
     text-shadow: var(--n-sombra-de-texto);
 }
-section.n-grid-area-4 > article > p {
-    color: var(--n-color-dos);
-    font-family: var(--n-fuente-dos);
-    font-size: 0.80em;
-    text-align: center;
-}
+section.n-grid-area-4 > article > p { font-size: 0.80em; text-align: center; }
