--- a/i_css/red_social/red_social.css
+++ b/i_css/red_social/red_social.css
@@ -1,4 +1,3 @@
-@import url("http://localhost/AllInOne/i_css/i/root.css");
 /* 
     Created on : 19 dic. 2020, 16:13:17
     Author     : neury-dev
@@ -17,18 +16,11 @@ h1 > a  {
 h1 > a:hover { color: var(--n-color); }
 header > p {
     color: var(--n-color-rojo);
-    font-family: var(--n-fuente-dos);
-    font-size: 1.10em;
     font-weight: bold;
 }
-h2 {
-    color: var(--n-color-dos);
-    font-family: var(--n-fuente);
-    font-size: 1.40em;
-}
+h3 { font-weight: bold; }
 .n-form-contenedor {
     position: relative;
-    border-radius: 0.3125em;
     padding: 1.25em 0 1.875em 0;
 } 
 .n-form-contenedor > form > .fila:after {
@@ -36,7 +28,7 @@ h2 {
     display: table;
     clear: both;
 }
-.n-form-contenedor > .fila > .linea { /* vertical line */
+.n-form-contenedor > .fila > .linea {
     position: absolute;
     left: 50%;
     transform: translate(-50%);
@@ -49,8 +41,7 @@ h2 {
     transform: translate(-50%, -50%);
     color: var(--n-color);
     background-color: var(--n-color-tres);
-    font-family: var(--n-fuente-dos);
-    border: 1px solid var(--n-color-dos);
+    border: 0.10em solid var(--n-color-dos);
     border-radius: 50%;
     padding: 0.50em 0.625em;
 }
@@ -69,60 +60,36 @@ h2 {
 .n-form-contenedor > .fila > .columna > form > .input-contenedor > input {
     width: 100%;
     border: none;
-    border-radius: 0.40em;
+    border-radius: var(--n-radio);
     padding: 0.625em;
     display: inline-block;
 }
 .n-form-contenedor > .fila > .columna > form > .input-contenedor > input:focus {
     color: var(--n-color);
     background-color: var(--n-color-tres);
-    outline: none;
 }
 .n-form-contenedor > .fila > .columna > form > .input-contenedor > i {
     color: var(--n-color);
     background-color: var(--n-color-dos);
     text-align: center;
     min-width: 3.125em;
-    border-radius: 0.40em;
+    border-radius: var(--n-radio);
     padding: 0.625em;
 }
 .n-form-contenedor > .fila > .columna > form > button {
     color: var(--n-color);
     background-color: var(--n-color-dos);
-    font-family: var(--n-fuente);
-    font-size: 0.90em;
+    font-weight: bold;
     width: 100%;
-    border: none;
-    border-radius: 0.50em;
-    padding: 0.50em;
-    outline: none;
-    cursor: pointer;
+    border-radius: var(--n-radio);
+    padding: var(--n-radio);
 }
 .n-form-contenedor > .fila > .columna > form > button:hover {
     color: var(--n-color-dos);
     background-color: var(--n-color-tres);
     text-shadow: var(--n-sombra-de-texto);
 }
-
-/* hide some text on medium and large screens */
-/*            .hide-md-lg {
-                display: none;
-            }*/
-
-/* bottom container */
-/*            .bottom-container {
-                text-align: center;
-                background-color: #666;
-                border-radius: 0px 0px 4px 4px;
-            }*/
-
-/* Responsive layout - when the screen is less than 650px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 650px) {
     .n-form-contenedor > .fila > .columna > form { width: 100%; }
     .n-form-contenedor > .fila > .linea { display: none; }
-    /* show the hidden text on small screens */
-    /*.hide-md-lg {
-        display: block;
-        text-align: center;
-    }*/
 }  
