--- a/i_css/red_social/nav.css
+++ b/i_css/red_social/nav.css
@@ -6,21 +6,28 @@
 --------------------------------------------------------------------------------*/
 .n-grid {
     display: grid;
-    grid-template-columns: 20em auto;
+    grid-template-columns: 200px 600px 200px;
     grid-gap: 0.10em;  
     
     position: absolute;
     top: 10em;
-    left: 2em;
-    width: calc(100% - 4em);
+    left: 50%;
+    transform: translateX(-50%);
+    /*width: calc(100% - 4em);*/
+    min-width: 999px;
+    max-width: 1000px;
+    border: 1px solid red;
+    overflow-x: auto;
 }
 /*.n-grid > section { border: 0.10em solid var(--n-color-dos); }*/ 
 .n-grid > .area-1 { grid-area: 1 / 1 / span 1 / span 1; }
 .n-grid > .area-2 { grid-area: 1 / 2 / span 1 / span 1; }
-.n-grid > .area-3 { grid-area: 1 / 3 / span 1 / span 1; }
+.n-grid > .area-3 { grid-area: 1 / 2 / span 1 / span 1; }
+.n-grid > .area-4 { grid-area: 1 / 3 / span 1 / span 1; }
 .n-grid > .area-1 > nav {
     display: flex;
     flex-direction: column;
+    padding-left: 32px;
 }
 .n-grid > .area-1 > nav > .principal {
     display: flex;
