--- a/i_css/red_social/perfil/perfil.css
+++ b/i_css/red_social/perfil/perfil.css
@@ -8,7 +8,7 @@
 */
 .n-grid {
     display: grid;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 500px 500px;
     grid-auto-rows: 20em 5em auto;
     /*grid-gap: 0.10em;*/  
     position: absolute;
